# Karapathy-agent

./: .dockerignore  .gitignore  Dockerfile
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai.py  db.py  main.py  seed_data.py
backend/tests/: conftest.py  test_ai.py  test_ai_api.py  test_ai_chat.py  test_auth.py  test_board_api.py  test_board_repository.py
docs/: DB_SCHEMA.md  PLAN.md  kanban_schema.sql
frontend/: AGENTS.md  playwright.config.ts
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: api.ts
frontend/tests/: ai-sidebar.spec.ts  kanban.spec.ts
scripts/: AGENTS.md  start-unix.sh  start-windows.ps1  stop-unix.sh  stop-windows.ps1
